newly updated ones

--- a/src/app/reports/delivery/delivery.component.html
+++ b/src/app/reports/delivery/delivery.component.html
@@ -37,11 +37,11 @@
                 <h6 style="    font-size: 20px;">Total Delivey Charge: {{totaldeliverycharge}}</h6>
             </div>
             <div class="col-sm-3">
-                <label for="">From</label>
+                <label for="">From Date</label>
                 <input type="date" class="form-control" (change)="fromdate($event)">
             </div>
             <div class="col-sm-3">
-                <label for="">Date</label>
+                <label for="">To Date</label>
 
                 <input type="date" class="form-control" (change)="todate($event)">
 
