--- a/src/app/reports/sales/sales.component.html
+++ b/src/app/reports/sales/sales.component.html
@@ -44,11 +44,11 @@
                 <input type="date" class="form-control" data-date-format="DD MMMM YYYY" (change)="singledate($event)">
             </div>
             <div class="col-sm-3">
-                <label for="">From</label>
+                <label for="">From Date</label>
                 <input type="date" class="form-control" data-date-format="DD MMMM YYYY" (change)="fromdate($event)">
             </div>
             <div class="col-sm-3">
-                <label for="">Date</label>
+                <label for="">To Date</label>
 
                 <input type="date" class="form-control" data-date-format="DD MMMM YYYY" (change)="todate($event)">
 
